--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import "~bulma/bulma";
+// @import "~bulma/bulma";
 
 /* Core variables */
 @import "base/vars";
@@ -16,7 +16,7 @@
 html {
   font-family: laca, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background: $background;
+  // background: $background;
   font-size: 10px;
 }
 
@@ -52,17 +52,18 @@ html {
 }
 
 .book {
+  // font-size: 2rem;
   background: linear-gradient(#4886d9, #448ff2, #796ad9, #c955d9);
   margin: auto;
   border-radius: 5px;
   height: 600px;
   width: 400px;
   text-align: center;
-  color: $white;
+  color: #fff;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  font-size: 0.9rem;
+  font-size: 2rem;
   border-left: 30px solid #131313;
   transform: rotate(-10deg) skewX(5deg) scale(0.8);
   box-shadow: -50px 50px 50px rgba(0, 0, 0, 0.5);
@@ -71,12 +72,18 @@ html {
 .box {
   display: flex;
   justify-content: center;
+  font-size: 50vw;
 }
 
 .book-title {
   font-weight: 600;
+  font-size: 3em;
 }
 
 .description {
   font-weight: 100;
+  font-size: 2em;
+}
+.copyright {
+  font-size: 0.7em;
 }
